<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/InventoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_phone_name"
                style="@style/DetailFieldStyle"
                android:hint="@string/hint_phone_name"
                android:inputType="textCapWords" />

            <!-- Manufacturer field -->
            <EditText
                android:id="@+id/edit_phone_manufacturer"
                style="@style/DetailFieldStyle"
                android:hint="@string/hint_phone_manufacturer"
                android:inputType="textCapWords" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_phone_price"
                style="@style/DetailFieldStyle"
                android:hint="@string/hint_phone_price"
                android:inputType="textCapWords" />

            <!-- Memory field -->
            <EditText
                android:id="@+id/edit_phone_memory"
                style="@style/DetailFieldStyle"
                android:hint="@string/hint_phone_memory"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/InventoryStyle"
            android:text="@string/quantity_label" />

        <EditText
            android:id="@+id/quantity_value"
            style="@style/DetailFieldStyle"
            android:layout_marginRight="8dp"
            android:hint="@string/quantity_label"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/remove_quantity"
            style="@style/QuantityButton"
            android:gravity="center_vertical"
            android:text="@string/decrease_quantity"
            android:textAlignment="center" />

        <Button
            android:id="@+id/add_quantity"
            style="@style/QuantityButton"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:text="@string/increase_quantity"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/spinner_quantity"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="16dp"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <Button
        android:id="@+id/add_image"
        style="@style/ImageButton"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:text="@string/add_image"
        android:textAlignment="center" />


</LinearLayout>
